[package]
name = "rust_robo_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
safe_drive = "0.3.5"
async-net = "2.0.0"
serde={version="1", features=["derive"]}
serde_json = "1"
[package.metadata.ros]
safe_drive_version = "0.3.5"